Fix ring on ios

--- a/resources/css/components/button.css
+++ b/resources/css/components/button.css
@@ -45,6 +45,7 @@
 
     /* Ring mode */
     &.mode-ring {
+        appearance: none;
         /* Set a ring */
         @apply bg-transparent ring-2 ring-black text-black font-semibold;
 
