--- a/resources/css/components/input.css
+++ b/resources/css/components/input.css
@@ -47,6 +47,7 @@
 
     /* Ring mode */
     &.mode-ring {
+        appearance: none;
         /* Set a ring */
         @apply bg-transparent ring-black text-black;
     }
